    <details> tags in Chromium/Chrome

  * Code blocks within responses to question submissions are now properly
    highlighted

  * Fixed a regression that caused the 'timeout' option in pythoncode test
    cases to be ignored

  * Fixed several issues with submission data not being handled properly
    (potentially breaking pages after 'save' or 'view answer')

SECURITY:

  * Several authentication types have been fixed to pull authentication
    information from a context that cannot be altered by individual courses.

ACCESSIBILITY:

  * Changed "radio" and "checkbox" multiplechoice variants to use fieldsets and
    to properly associate labels with inputs

  * Improved screen-reader-friendliness of solution displays for the "checkbox"
    multiplechoice renderer

  * Improved code displays (with and without line numbers) to make them more
    usable with a screen reader

  * Automatically set ARIA labels for built-in question types based on
    csq_prompt (and added the ability to specify a csq_preamble that is not
    included as part of the ARIA label).

  * Switched from KaTeX to MathJax for math rendering, for better screen reader
    support

  * Improved keyboard-oriented navigation and screen-reader support for the
    navigation breadcrumbs and the top menu

  * Improved accessibility of modal dialogs from the cs_modal javascript
    function

DOCUMENTATION:

VENDORED SOFTWARE:

  * Removed KaTeX from the distribution

  * Included MathJax (v3.2.2) in the distribution

  * Upgraded CodeMirror to version 6


##################
# Version 18.0.0 #
##################

(formerly known as 2022.9.0)

ADDED:

  * Added cs_log_lock_location to control where locks for log files are written

  * Added csq_renderer option to pythonic qtype, to allow choosing between
    bigbox and smallbox renderers

  * The pythonic qtype now respects the csq_check_function variable (which can
    still be overridden by specifying check functions for individual tests)
